# churn-predictor

./: .env.example  .gitignore  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: dashboard.py
config/: config.yaml
docs/: api.md  architecture.md  index.md  setup.md
great_expectations/: README.md
models/: scaler_mean.npy  scaler_scale.npy
models/sklearn_model/: MLmodel  conda.yaml  requirements.txt
notebooks/: README.md
src/churn/: __init__.py  config.py
src/churn/api/: main.py  schemas.py
src/churn/data/: generate_data.py  ingest.py  validate_data.py
src/churn/db/: models.py  session.py
src/churn/features/: build_features.py
src/churn/models/: predict.py  train_sklearn.py  train_torch.py
src/churn/pipelines/: airflow_dag.py
src/churn_predictor.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_data_generation.py  test_features.py
